<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.MainActivity.MainActivity">
<TextView
    android:id="@+id/textMynotes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_12sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_12sdp"
    android:text="@string/my_notes"
    android:textSize="@dimen/_20ssp"
    android:textColor="@color/colorWhite"
    android:fontFamily="@font/ubuntu_bold"
    android:includeFontPadding="false"
    app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMynotes">
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/app_name"
            android:tint="@color/colorSearchIcon"/>
    <EditText
        android:id="@+id/inputSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/search_notes"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        android:inputType="text"
        android:textSize="@dimen/_13ssp"
        />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/NoteRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="2sp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>

    <LinearLayout
        android:id="@+id/layoutQuickAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionBackground"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
        android:id="@+id/imageAddnote"
        android:layout_width="@dimen/_23sdp"
        android:layout_height="@dimen/_23sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add_outline"
        android:tint="@color/colorIcons"
        />
        <ImageView
            android:id="@+id/imageAddImage"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            android:tint="@color/colorIcons"
            />
        <ImageView
            android:id="@+id/imageAddWeblink"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            android:tint="@color/colorIcons"
            />
        
    </LinearLayout>
    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_add_buttom"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/layoutQuickAction"
        app:layout_constraintTop_toTopOf="@id/layoutQuickAction"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>